test/mutation_analysis/s0219_contains_duplicate_ii/hafis/ablation_o3_full/mutants/2/result.txt
./test/mutation_analysis/s0219_contains_duplicate_ii/hafis/ablation_o3_full/mutants/2/Solution.java:18: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
